--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -7,10 +7,12 @@
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        zOrderOnTop="true"
+
         >
 
     </com.google.android.gms.maps.MapView>
@@ -20,7 +22,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/textView2"
+        android:id="@+id/testText"
         android:layout_below="@+id/mapview"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
