--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Check IN  "
-            android:id="@+id/button"
+            android:id="@+id/check_in"
             android:background="@drawable/button"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
@@ -32,11 +32,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Check OUT"
-            android:id="@+id/button2"
+            android:id="@+id/check_out"
             android:background="@drawable/button"
             android:layout_marginEnd="43dp"
             android:layout_marginRight="43dp"
-            android:layout_alignTop="@+id/button"
+            android:layout_alignTop="@+id/check_in"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
