Added alert dialog for the proceed buttons in location and swaps fragments

--- a/app/src/main/res/layout/fragment_leaves.xml
+++ b/app/src/main/res/layout/fragment_leaves.xml
@@ -29,10 +29,14 @@
                 android:layout_gravity="center_horizontal|center_vertical"/>
         </LinearLayout>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView" >
+
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="30dp"
             android:orientation="vertical"
@@ -45,6 +49,7 @@
                 android:background="#f3f3f3"
                 android:paddingLeft="5dp"
                 android:layout_marginTop="30dp"/>
+
             <EditText
                 android:id="@+id/todate"
                 android:layout_width="fill_parent"
@@ -53,7 +58,10 @@
                 android:background="#f3f3f3"
                 android:paddingLeft="5dp"
                 android:layout_marginTop="15dp"/>
-            <EditText android:layout_width="fill_parent"
+
+            <EditText
+                android:id="@+id/leaveType"
+                android:layout_width="fill_parent"
                 android:layout_height="40dp"
                 android:text="@string/typeofleave"
                 android:focusable="false"
@@ -61,13 +69,17 @@
                 android:paddingLeft="5dp"
                 android:layout_marginTop="15dp"
                 />
-            <EditText android:layout_width="fill_parent"
+            <EditText
+                android:id="@+id/reason"
+                android:layout_width="fill_parent"
                 android:layout_height="140dp"
                 android:hint="@string/reason"
                 android:background="#f3f3f3"
                 android:paddingLeft="5dp"
                 android:layout_marginTop="15dp"/>
-            <Button android:layout_width="190dp"
+            <Button
+                android:id="@+id/apply"
+                android:layout_width="190dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
@@ -76,9 +88,12 @@
 
         </LinearLayout>
 
+        </ScrollView>
+
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
+
     </LinearLayout>
 
 </FrameLayout>
