--- a/app/src/main/res/layout/fragment_swaps.xml
+++ b/app/src/main/res/layout/fragment_swaps.xml
@@ -32,7 +32,7 @@
             android:visibility="gone"/>
 
         <Button
-            android:id="@+id/findSelected"
+            android:id="@+id/send"
             android:layout_width="242dp"
             android:layout_height="wrap_content"
             android:text="SEND REQUEST"
