--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -60,7 +60,8 @@
             android:layout_alignParentStart="true"
             android:weightSum="1"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true">
+            android:layout_alignParentLeft="true"
+            android:id="@+id/linearLayout">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -84,6 +85,62 @@
                 android:layout_weight="0.17"
                 android:layout_gravity="fill_horizontal"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout"
+            >
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Avilable"
+            android:layout_weight="3"
+            android:id="@+id/textView2"
+            android:layout_below="@+id/linearLayout"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textColor="@color/green_800"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="2"
+            android:id="@+id/AvailLeaves"
+            android:layout_below="@+id/linearLayout"
+            android:layout_toRightOf="@+id/textView2"
+            android:layout_weight="1"
+            android:textColor="@color/green_800"
+            />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Pending"
+            android:id="@+id/textView4"
+            android:layout_below="@+id/linearLayout"
+            android:layout_toRightOf="@+id/AvailLeaves"
+            android:layout_weight="3"
+            android:layout_toEndOf="@+id/AvailLeaves"
+            android:textColor="@color/orange_900"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="1"
+            android:id="@+id/pendingLeaves"
+            android:layout_below="@+id/linearLayout"
+            android:layout_toRightOf="@+id/textView4"
+            android:layout_toEndOf="@+id/textView4"
+            android:layout_weight="1"
+
+            android:textColor="@color/orange_900"
+            />
+        </LinearLayout>
+
     </RelativeLayout>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
