--- a/app/src/main/res/layout/fragment_swaps.xml
+++ b/app/src/main/res/layout/fragment_swaps.xml
@@ -9,7 +9,8 @@
         android:orientation="vertical"
         >
         <EditText
-            android:layout_width="143dp"
+            android:drawableRight="@drawable/calendar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="date"
             android:ems="10"
