UI: enhanced dashboard layouts

--- a/app/src/main/res/layout/fragment_leaves.xml
+++ b/app/src/main/res/layout/fragment_leaves.xml
@@ -41,8 +41,9 @@
             android:layout_marginBottom="30dp"
             android:orientation="vertical"
             >
+            <!--android:drawableRight="@drawable/calendar"-->
+
             <EditText
-                android:drawableRight="@drawable/calendar"
                 android:id="@+id/fromdate"
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
@@ -52,7 +53,6 @@
                 android:layout_marginTop="30dp"/>
 
             <EditText
-                android:drawableRight="@drawable/calendar"
                 android:id="@+id/todate"
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
