--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,218 +1,236 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/scrollView2">
+
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="161dp"
-        android:background="@color/white"
-        android:paddingBottom="5dp"
-        android:orientation="horizontal"
-        android:layout_gravity="top">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Check IN  "
-            android:id="@+id/check_in"
-            android:background="@drawable/button"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="53dp"
-            android:layout_marginStart="53dp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Check OUT"
-            android:id="@+id/check_out"
-            android:background="@drawable/button"
-            android:layout_marginEnd="43dp"
-            android:layout_marginRight="43dp"
-            android:layout_alignTop="@+id/check_in"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-    </RelativeLayout>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="166dp"
-        android:background="@color/white"
-        android:paddingBottom="5dp"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="#5c5eff"
-            android:orientation="horizontal"
-            android:layout_alignParentStart="true"
-            android:weightSum="1"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:id="@+id/linearLayout">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Leaves "
-                android:textColor="#FFFFFF"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text=""
-                android:textColor="#FFFFFF" />
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:text="Leave apply"
-                android:id="@+id/button3"
-                android:background="@drawable/button"
-                android:layout_weight="0.17"
-                android:layout_gravity="fill_horizontal"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/linearLayout"
-            >
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Avilable"
-            android:layout_weight="3"
-            android:id="@+id/textView2"
-            android:layout_below="@+id/linearLayout"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textColor="@color/green_800"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="2"
-            android:id="@+id/AvailLeaves"
-            android:layout_below="@+id/linearLayout"
-            android:layout_toRightOf="@+id/textView2"
-            android:layout_weight="1"
-            android:textColor="@color/green_800"
-            />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Pending"
-            android:id="@+id/textView4"
-            android:layout_below="@+id/linearLayout"
-            android:layout_toRightOf="@+id/AvailLeaves"
-            android:layout_weight="3"
-            android:layout_toEndOf="@+id/AvailLeaves"
-            android:textColor="@color/orange_900"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="1"
-            android:id="@+id/pendingLeaves"
-            android:layout_below="@+id/linearLayout"
-            android:layout_toRightOf="@+id/textView4"
-            android:layout_toEndOf="@+id/textView4"
-            android:layout_weight="1"
-
-            android:textColor="@color/orange_900"
-            />
-        </LinearLayout>
-
-    </RelativeLayout>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="154dp"
-        android:background="@color/white"
-        android:paddingBottom="5dp"
-        android:orientation="vertical"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="#5e61ff"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            android:layout_alignParentTop="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Shift Swapping"
-                android:textColor="#FFFFFF" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text=""
-                android:textColor="#FFFFFF" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:text="Swaping"
-                android:id="@+id/button4"
-                android:background="@drawable/button"
-                android:layout_weight="0.21" />
-        </LinearLayout>
-    </RelativeLayout>
-
-    <LinearLayout
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/donation_bloodbank_name"
-        android:padding="10dp"
-        android:background="#585aff"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <TextView
-            android:layout_width="wrap_content"
+        android:background="@color/white"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="3dp"
+        android:layout_margin="5dp"
+        android:id="@+id/attendanceCard">
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Attendence "
-            android:textColor="#FFFFFF"
-            android:id="@+id/leaves_key" />
+            android:background="@color/white"
+            android:paddingBottom="5dp"
+            android:orientation="horizontal"
+            android:id="@+id/attendanceLayout"
+            android:layout_gravity="top">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text=""
-            android:textColor="#FFFFFF"
-            android:id="@+id/leaves_value" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/attendanceHeader"
+                android:padding="10dp"
+                android:background="#585aff"
+                android:orientation="horizontal"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
 
-    </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Attendence"
+                    android:textColor="#FFFFFF"
+                    android:id="@+id/leaves_key"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/attendanceHeader"
+                android:orientation="horizontal"
+                android:weightSum="1">
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="CHECK IN"
+                    android:id="@+id/check_in"
+                    android:textColor="#585aff"
+                    android:layout_weight="0.5"
+                    style="@style/Widget.AppCompat.Button.white"
+                    />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Check OUT"
+                    android:id="@+id/check_out"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/button"
+                    />
+            </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="3dp"
+        android:layout_margin="5dp"
+        android:layout_below="@id/attendanceCard"
+        android:id="@+id/leavesCard">
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="166dp"
+            android:background="@color/white"
+            android:paddingBottom="5dp"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="#5c5eff"
+                android:orientation="horizontal"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/leavesLayout">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Leaves "
+                    android:layout_gravity="start"
+                    android:textColor="#FFFFFF"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="28dp"
+                    android:text="apply"
+                    android:id="@+id/button3"
+                    android:background="@drawable/button"
+
+                    android:layout_gravity="end"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true" />
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_below="@+id/leavesLayout"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Available"
+                    android:layout_weight="3"
+                    android:id="@+id/textView2"
+                    android:textColor="@color/green_800"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="2"
+                    android:id="@+id/AvailLeaves"
+                    android:layout_weight="1"
+                    android:textColor="@color/green_800"
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Pending"
+                    android:id="@+id/textView4"
+                    android:layout_weight="3"
+                    android:textColor="@color/orange_900"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="1"
+                    android:id="@+id/pendingLeaves"
+                    android:layout_weight="1"
+                    android:textColor="@color/orange_900"
+                    />
+            </LinearLayout>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        card_view:cardCornerRadius="4dp"
+        android:layout_margin="5dp"
+        card_view:cardElevation="3dp"
+        android:layout_gravity="bottom"
+        android:layout_below="@id/leavesCard"
+        android:id="@+id/swapsCard">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="154dp"
+            android:background="@color/white"
+            android:paddingBottom="5dp"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="#5e61ff"
+                android:orientation="horizontal"
+                android:weightSum="1"
+                android:layout_alignParentTop="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Shift Swapping"
+                    android:textColor="#FFFFFF" />
+
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:text="request"
+                    android:id="@+id/button4"
+                    android:background="@drawable/button"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_weight="0.21" />
+            </RelativeLayout>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
+</ScrollView>
