--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,11 @@
         <item name="android:textColorPrimary">@color/iron</item>
         <item name="android:background">@color/primary</item>
     </style>
+    <style name="Widget.AppCompat.Button.white" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:color">@color/black</item>
+        <item name="colorAccent">@color/white</item>
+        <item name="colorButtonNormal">@color/white</item>
+    </style>
 
 
 </resources>
