--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="161dp"
+        android:layout_height="match_parent"
         android:background="@color/white"
         android:paddingBottom="5dp"
         android:orientation="horizontal"
@@ -46,13 +46,19 @@
             android:background="@color/white"
             card_view:cardCornerRadius="4dp"
             card_view:cardElevation="3dp"
-            android:layout_margin="5dp"
             android:id="@+id/attendanceCard"
-            android:layout_below="@id/attendanceButtonsLayout">
-            <LinearLayout
+            android:layout_below="@id/attendanceButtonsLayout"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp">
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:background="@color/white"
+                android:paddingBottom="5dp"
+                android:orientation="horizontal"
+                android:id="@+id/attendanceLayout"
+                android:layout_gravity="top">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -88,15 +94,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="GET >"
-                        android:id="@+id/get_history"
+                        android:id="@+id/getHistoryButton"
                         />
                 </LinearLayout>
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:id="@+id/attendanceListView">
+                    android:id="@+id/attendanceListView"
+                    android:layout_below="@+id/dateRangePickerLayout">
                 </ListView>
-            </LinearLayout>
+            </RelativeLayout>
         </android.support.v7.widget.CardView>
 
     </RelativeLayout>
