--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -103,6 +103,18 @@
                     android:id="@+id/attendanceListView"
                     android:layout_below="@+id/dateRangePickerLayout">
                 </ListView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:visibility="gone"
+                    android:gravity="center"
+                    android:text="No records found."
+                    android:textColor="@color/red"
+                    android:id="@+id/attendanceListError"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_below="@+id/dateRangePickerLayout" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
