--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -86,11 +86,20 @@
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:headerDividersEnabled="true"
                 android:layout_below="@id/attendanceButtonsLayout"
                 android:id="@+id/attendanceListView"
                 >
-
             </ListView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:visibility="gone"
+                android:text="No records found."
+                android:textColor="@color/red"
+                android:id="@+id/attendanceListError" />
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
