--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -115,7 +115,7 @@
         android:id="@+id/leavesCard">
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="166dp"
+            android:layout_height="200dp"
             android:background="@color/white"
             android:paddingBottom="5dp"
             android:orientation="vertical"
@@ -130,6 +130,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
+
                 android:id="@+id/leavesLayout">
 
                 <TextView
@@ -155,6 +156,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
+                android:visibility="gone"
                 android:layout_below="@+id/leavesLayout"
                 >
                 <TextView
@@ -195,7 +197,11 @@
                     android:textColor="@color/orange_900"
                     />
             </LinearLayout>
-
+            <include
+                layout="@layout/under_construction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/leavesLayout"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
@@ -203,7 +209,7 @@
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:background="@color/white"
         card_view:cardCornerRadius="4dp"
         android:layout_margin="5dp"
@@ -214,7 +220,7 @@
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="154dp"
+            android:layout_height="wrap_content"
             android:background="@color/white"
             android:paddingBottom="5dp"
             android:orientation="vertical">
@@ -226,6 +232,7 @@
                 android:background="#5e61ff"
                 android:orientation="horizontal"
                 android:weightSum="1"
+                android:id="@+id/shiftHeader"
                 android:layout_alignParentTop="true">
 
                 <TextView
@@ -247,6 +254,11 @@
                     android:layout_weight="0.21" />
             </RelativeLayout>
 
+            <include
+                layout="@layout/under_construction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/shiftHeader"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
