--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,10 @@
             android:id="@+id/menu_swap"
             android:icon="@drawable/ic_menu_swaping"
             android:title="Shift Swapping" />
+        <item
+            android:id="@+id/menu_logout"
+            android:icon="@mipmap/ic_exit_to_app_black_24dp"
+            android:title="Logout" />
     </group>
 
 </menu>
