--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,8 +2,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/colorPrimary"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
+
     android:fitsSystemWindows="true">
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,18 +43,18 @@
                 android:maxLength="15"
                 android:minWidth="150dp"
                 android:textColor="@color/white"
+                style=""
                 android:gravity="center_horizontal"
                 android:layout_gravity="center_horizontal"
                 android:maxLines="1"
                 android:singleLine="true" />
             <Button
                 android:layout_width="wrap_content"
-                android:layout_height="28dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="verify"
                 android:textColor="@color/colorPrimaryDark"
-                android:background="@drawable/button"
-
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:id="@+id/button_verify"/>
         </LinearLayout>
         <LinearLayout
