--- a/app/src/main/res/layout/activity_retry.xml
+++ b/app/src/main/res/layout/activity_retry.xml
@@ -46,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
         android:text="Retry" />
 
 </LinearLayout>
