Few UI Enhancements in attendance fragment

--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -20,22 +20,21 @@
             android:weightSum="1">
             <Button
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:text="CHECK IN"
                 android:id="@+id/check_in"
-                android:textColor="#585aff"
                 android:layout_weight="0.5"
-                android:background="@drawable/button"
+                style="@style/Widget.AppCompat.Button.blueish"
                 />
 
             <!--style="@style/Widget.AppCompat.Button.white"-->
             <Button
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:text="Check OUT"
                 android:id="@+id/check_out"
                 android:layout_weight="0.5"
-                android:background="@drawable/button"
+                style="@style/Widget.AppCompat.Button.blueish"
                 />
         </LinearLayout>
 
@@ -56,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:paddingBottom="5dp"
+                android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:id="@+id/attendanceLayout"
                 android:layout_gravity="top">
@@ -64,6 +64,7 @@
                     android:layout_height="wrap_content"
                     android:weightSum="1"
                     android:background="#585aff"
+                    android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:id="@+id/dateRangePickerLayout"
                     android:paddingTop="8dp">
@@ -92,9 +93,10 @@
                         android:layout_weight="0.47"/>
                     <Button
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="32dp"
                         android:text="GET >"
                         android:id="@+id/getHistoryButton"
+                        android:background="@drawable/button"
                         />
                 </LinearLayout>
                 <ListView
