--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,6 @@
         android:layout_marginBottom="50dp"
         android:id="@+id/clockImage"
         android:src="@mipmap/clock6"
-
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true" />
     <ScrollView
@@ -42,12 +41,21 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
 
-                <ImageView android:src="@mipmap/ic_launcher"
+                <ImageView android:src="@mipmap/ic_yousee"
                     android:layout_width="wrap_content"
                     android:layout_height="72dp"
                     android:layout_marginBottom="24dp"
                     android:id="@+id/loginText"
                     android:layout_gravity="center_horizontal" />
+
+                <TextView
+                    android:text="Enter your Phone Number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/phoneLabel"
+                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal"
+                    />
 
 
                 <AutoCompleteTextView
@@ -79,7 +87,14 @@
                 android:orientation="vertical"
                 android:visibility="gone"
                 android:id="@+id/otpLayout">
-
+                <TextView
+                    android:text="Enter your OTP:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/otpLabel"
+                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal"
+                    />
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -111,6 +126,7 @@
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:text="Submit"
                     />
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
