--- a/app/src/main/res/layout/roaster_listview_header.xml
+++ b/app/src/main/res/layout/roaster_listview_header.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:padding="5dp"
     android:layout_height="wrap_content">
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Date"
-        android:layout_weight="1" />
-
-    <TextView
-        android:layout_width="0dp"
+        android:text="Shift Timings - Next 3 days"/>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Shift Timings"
-        android:layout_weight="2" />
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:layout_weight="1" />
 
-</LinearLayout>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Shift Timings"
+            android:layout_weight="2" />
+    </LinearLayout>
+</RelativeLayout>
